# SingularityMM

./: .copilot-instructions.md  .gitignore  README.md  build-flatpak-arch.sh  com.syzzle.singularity.json  flake.nix  index.html  package-lock.json  package.json  prepare-flatpak.sh  shell.nix  vite.config.js
.github/scripts/: generate_curated_list.cjs
.github/workflows/: build-flatpak.yml  build-linux.yml  build-pr.yml  build.yml  publish-flatpak-repo.yml  release.yml  update_curated_list.yml
flatpak/: build-flatpak.sh  com.syzzle.Singularity.json  com.syzzle.Singularity.metainfo.xml  com.syzzle.singularity.json  com.syzzle.singularity.metainfo.xml  copy-resources.sh  gh-pages-index.html  prepare-flatpak.sh  singularity-mm.desktop.template  singularity-wrapper
nix/: flake.nix
packaging/: singularity.desktop.template  singularity.metainfo.xml
repo/: flatpak-repo-signing.asc  summary  summary.idx  summary.idx.sig  summary.sig
repo/delta-indexes/9d/: W4GHBGgciym599gOFuaLJAm4HnpksZ9mw_jvaTkWA.index
repo/refs/heads/appstream/: x86_64
repo/summaries/: 120ef5ff97e2de65749a6399079f67b4672ba5f816021b8b6acdb0223f37090a-d1bfc18ef5200de11b56ce7837db4da8f27c92d860b2c203ab1d4a7d0970816b.delta  8781ae45f4e50f34de2047412e654b5a4739096ad400a1d0774663eb805fa046-88f859dcb79ec051cc3b3b68562ddec7b3da731f45cf0c9af2b615c0b2972579.delta  9417e472bdb44301872ed19e6660ecf6e82773e0795effc763c579903c999507-b5dae7cee1b103455d9df0e0fdda3ef4404f872f1ff13546be9bf8c55073d283.delta  abc5446e6113c48cf7cf647e5531aea041b7d07ad72224355a1bbf3294ff343a-f3ee14686d3cc3889289792a1cf6795438db90cd78cb5c037bc48ef5dea0af2f.delta  c87fd8137185dcc9fec4fe4d29a680f00566e1770937a0daf0109f7242a6bd19-f079ae54ae04cf77ed21f738f67ab75f84184ca4f97f974814e509b1bebb9ef7.delta
scripts/: build-binary.sh  prepare-flatpak.sh
scripts/flatpak/: build-flatpak.sh  copy-resources.sh
src/: gamepad-prompts.css  gamepad.js  main.js  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/locales/: cn.json  de.json  en.json  es.json  fr.json  kr.json  pt.json  sv.json
src-tauri/src/: main.rs
(+31 files in other folders)
