[package]
name = "Singularity"
version = "2.0.0"
description = "A No Man's Sky Mod Manager"
authors = ["Syzzle"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.55"
open = "5"
zip = "6.0.0"
unrar = "0.5.8"
chrono = "0.4"
quick-xml = { version = "0.38", features = ["serialize"] }
dotenvy = "0.15"
reqwest = "0.12"
tauri-plugin-single-instance = { version = "2" }
tauri-plugin-fs = "2"
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true 
lto = true  
