[package]
name = "Singularity"
version = "2.2.7"
description = "A No Man's Sky Mod Manager"
authors = ["Syzzle"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5"
zip = "6.0.0"
unrar = "0.5.8"
chrono = "0.4"
quick-xml = { version = "0.38", features = ["serialize"] }
reqwest = "0.12"
tauri-plugin-single-instance = { version = "2" }
tauri-plugin-fs = "2"
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = "2"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.18", features = ["v4"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
sevenz-rust = "0.6"
tauri-plugin-process = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true 
lto = true
